<resources>
    <string name="app_name">ArchitectureComponent</string>
    <string name="home">Home</string>
    <string name="retry">Retry</string>
    <string name="setting">Setting</string>
    <string name="hint">Please click the below genres to search movies</string>
    <string name="trailer">Trailer</string>
    <string name="visit_website">Visit website</string>
    <string name="related_movies">Related movies</string>
    <string name="close">Close</string>
    <string name="filter_options">Filter options</string>
    <string name="blur">Blur</string>
    <string name="gray_scale">Gray scale</string>
    <string name="water_color">Water color</string>
    <string name="saving_options">Saving options</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="save_to_imgur">Save to Imgur</string>
    <string name="filter_image">Filter image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
