<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sournary.architecturecomponent.ui.filterimage.FilterImageViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <com.sournary.architecturecomponent.widget.SquareImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:url="@{viewModel.imagePath}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_scrim" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:indeterminate="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{viewModel.showProgress}" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/filterOptionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/filter_options"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_19"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/blurCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/blur"
                    android:translationX="-5dp"
                    app:layout_constraintStart_toStartOf="@id/filterOptionTitleText"
                    app:layout_constraintTop_toBottomOf="@id/filterOptionTitleText" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/grayScaleCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gray_scale"
                    android:translationX="-5dp"
                    app:layout_constraintStart_toStartOf="@id/filterOptionTitleText"
                    app:layout_constraintTop_toBottomOf="@id/blurCheck" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/waterColorCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_color"
                    android:translationX="-5dp"
                    app:layout_constraintStart_toStartOf="@id/filterOptionTitleText"
                    app:layout_constraintTop_toBottomOf="@id/grayScaleCheck" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/savingOptionsTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/saving_options"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_19"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/space"
                    app:layout_constraintTop_toBottomOf="@id/progress" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:translationX="-5dp"
                    app:layout_constraintStart_toStartOf="@id/savingOptionsTitleText"
                    app:layout_constraintTop_toBottomOf="@id/savingOptionsTitleText">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/saveToGalleryRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_4"
                        android:checked="true"
                        android:text="@string/save_to_gallery" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/saveToImgur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/save_to_imgur" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveToGalleryButton"
            style="@style/ArchitectureComponent.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:icon="@drawable/ic_save_file"
            app:visibleGone="@{viewModel.showSaveToGallery}" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cancelWorkButton"
            style="@style/ArchitectureComponent.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:icon="@drawable/ic_close"
            app:visibleGone="@{viewModel.showCancelWork}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
